# perception

base/: CMakeLists.txt  camera.cc  camera.h  camera_util.cc  camera_util.h  distortion_model.cc  distortion_model.h  object.cc  object.h  omnidirectional_model.cc  omnidirectional_model.h  package.xml  perception_gflags.cc  perception_gflags.h  point.cc  point.h  polynomial.cc  polynomial.h  show_obstacle_rviz.cc  show_obstacle_rviz.h  timer.h  track_object_types.cc  track_object_types.h
base/Hungarian/: Hungarian.cc  Hungarian.h
base/kalman_filter/: kalman_filter.cc  kalman_filter.h
base/km_solver/: km_solver.cc  km_solver.h
base/proto/: CMakeLists.txt  fusion_component_config.pb.cc  fusion_component_config.pb.h  fusion_component_config.proto  perception_component.pb.cc  perception_component.pb.h  perception_component.proto
base/registerer/: registerer.cc  registerer.h
base/sensor_manager/: sensor_manager.cc  sensor_manager.h
base/thread/: concurrent_queue.h  mutex.h  thread.cc  thread.h  thread_pool.cc  thread_pool.h  thread_worker.cc  thread_worker.h
calib_check/: CMakeLists.txt  README.md  package.xml
calib_check/common/: config_parser.h  visualisation.cc  visualisation.h
calib_check/config/: calib_check_config.txt
calib_check/include/: calib_check_ros.h
calib_check/launch/: perception_calib_check.launch
calib_check/nodes/: calib_check_node.cc  calib_check_ros.cc
fusion/: CMakeLists.txt
fusion/app/: fusion_node.cc  obstacle_multi_sensor_fusion.cc  obstacle_multi_sensor_fusion.h  perception_fusion_component.cc  perception_fusion_component.h
fusion/base/: base_forward_declaration.h  base_init_options.cc  base_init_options.h  blob.cc  blob.h  box.h  common.h  comparison_traits.h  concurrent_object_pool.h  configmanager.cc  configmanager.h  frame.h  frame_supplement.h  fusion_log.h  image.h  image_8u.h  impending_collision_edge.h  object.cc  object.h  object_pool.h  object_pool_types.cc  object_pool_types.h  object_supplement.h  object_types.h  point.h  point_cloud.h  scene.cc  scene.h  sensor.cc  sensor.h  sensor_data_manager.cc  sensor_data_manager.h  sensor_frame.cc  sensor_frame.h  sensor_object.cc  sensor_object.h  syncedmem.cc  syncedmem.h  track.cc  track.h  (+6 more)
fusion/common/: base_filter.h  camera_util.cc  camera_util.h  dst_evidence.cc  dst_evidence.h  duration.cc  duration.h  environment.h  file.cc  file.h  frame_transform.h  fusion_define.h  global_util.cc  global_util.h  gps_proj.cc  gps_proj.h  information_filter.cc  information_filter.h  iou.cc  iou.h  time.cc  time.h  visualisation.cc  visualisation.h  yaml.h
fusion/common/extended_kalman_filter/: extended_kalman_config.cc  extended_kalman_config.h  extended_kalman_filter.cc  extended_kalman_filter.h
fusion/common/object_convertor/: base_convertor.cc  base_convertor.h  (+10 more)
fusion/config/: config_manager.config
fusion/rviz_display/: arrow_marker_pub.cc  arrow_marker_pub.h  base_marker_pub.cc  base_marker_pub.h  base_pub.cc  base_pub.h  lable_info_marker_pub.cc  lable_info_marker_pub.h  object_marker_pub.cc  object_marker_pub.h  polygon_marker_pub.cc  polygon_marker_pub.h  rviz_display.cc  rviz_display.h  track_info_marker_pub.cc  track_info_marker_pub.h  trajectory_marker_pub.cc  trajectory_marker_pub.h
fusion/test/: unit_test.cc
fusion_mid/: CMakeLists.txt  README.md  package.xml
fusion_mid/common/: cluster_interface.h  component_cluster.cc  component_cluster.h  config_parser.h  coordinate_transformer.h  data_converter.cc  data_converter.h  define.h  dev_rotate_iou.cc  dev_rotate_iou.h  display.cc  display.h  mid_struct.h  object_type_convert.cc  object_type_convert.h  tic_toc.h  utils.cc  utils.h  vec2.h  visualisation.cc  visualisation.h
fusion_mid/frustum_rcnn/: CMakeLists.txt
fusion_mid/launch/: perception_fusion_mid.launch  perception_fusion_mid_gdb.launch
fusion_mid/models/: epoch=0045-iou_bev_mean=0.25.ckpt_1223.engine  epoch=0054-iou_bev_mean=0.34.ckpt.engine  epoch=0059-iou_bev_mean=0.31.ckpt_noise_0307.engine  epoch=0065-iou_bev_mean=0.36.ckpt_new_vege_0329.engine  epoch=0065-iou_bev_mean=0.39.ckpt_230531.engine  epoch=0069-iou_bev_mean=0.40.ckpt_0614_v3.engine
fusion_mid/nodes/: fpnet_processing_unit.cc  fpnet_processing_unit.h  mid_fusion_node.cc
fusion_mid/proto/: CMakeLists.txt  fusion_mid_component.pb.cc  fusion_mid_component.pb.h  fusion_mid_component.proto  fusion_mid_tracker.pb.cc  fusion_mid_tracker.pb.h  fusion_mid_tracker.proto  hm_matcher_conf.pb.cc  hm_matcher_conf.pb.h  hm_matcher_conf.proto
lidar/: CMakeLists.txt  README.MD  package.xml
lidar/application/: CMakeLists.txt
lidar/cmake/: cuda.cmake  dependence.cmake
lidar/common/: CMakeLists.txt
lidar/launch/: perception_M1_lidar.launch  perception_falcon_lidar.launch  perception_lidar.launch  perception_lidar_beijing.launch  perception_lidar_yantai.launch  perception_zvision_lidar.launch
lidar/node/: rs_perception_node.cpp
lidar/scripts/: perception_troubleshooting.py
pointcloud_transform/: CMakeLists.txt  README.md  package.xml  pointcloud_transform.launch
pointcloud_transform/src/: pointcloud_transform.cpp
radar/: CMakeLists.txt  package.xml
radar/common/: CMakeLists.txt
radar/config/: bus.yaml
radar/fusion/: fusion_node.cc  obstacle_radar_fusion.cc  obstacle_radar_fusion.h
radar/proto/: CMakeLists.txt  radar_fusion_component.proto
radar/rviz_display/: base_marker_pub.cc  base_marker_pub.h  lable_global_info_marker_pub.cc  lable_global_info_marker_pub.h  lable_local_info_marker_pub.cc  lable_local_info_marker_pub.h  polygon_marker_pub.cc  polygon_marker_pub.h  rviz_display.cc  rviz_display.h
v2x/: CMakeLists.txt  package.xml
v2x/app/: obstacle_v2x_fusion.cc  obstacle_v2x_fusion.h  v2x_fusion_node.cc
v2x/common/: transform.h
v2x/config/: v2x_config.yaml
v2x/proto/: CMakeLists.txt  v2x_fusion_component.proto
xiaoba_fusion/: CMakeLists.txt  lidar_data_fusion.cc  lidar_data_fusion.h  lidar_data_manager.cc  lidar_data_manager.h  lidar_data_monitor.cc  lidar_data_monitor.h  lidar_fault_reporter.cc  lidar_fault_reporter.h  lidars_fusion.launch  package.xml
(+418 files in other folders)
