<?xml version="1.0"?>
<package format="2">
  <name>rs_perception_node</name>
  <version>0.0.0</version>
  <description>The rs_perception node package</description>
  <maintainer email="hi@zhidaoauto.com">hi</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <exec_depend>pcl_ros</exec_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <build_depend>common</build_depend>
  <exec_depend>common</exec_depend>

</package>
