<?xml version="1.0"?>
<package format="2">
  <name>perception_radar</name>
  <version>0.0.0</version>
  <description>The perception_radar package</description>
  <maintainer email="tongbochen@zhidaoauto.com">tongbochen</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>drivers_radar</build_depend>
  <build_depend>drivers_radar_proto</build_depend>
  <build_depend>autopilot_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>common</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>drivers_radar</exec_depend>
  <exec_depend>autopilot_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
